<resources>
    <string name="app_name">FinalApp</string>
    <string name="item2satu">(i) Analog untuk menggerakan hero yang kamu kendalikan.\n\n(ii) Lakukan serangan pada musuh (creep ataupun hero) menggunakan tombol ini.\n\n(iii) Gunakan pilihan skill unik yang dimiliki hero yang kamu kendalikan dengan menekan salah satu tombol skill.\n\n(iv) Tombol Teleport, Heal, dan Observer Ward. Pindahkan hero secara langsung ke salah satu bangunan tim kamu dengan tombol Teleport. Pulihkan darah dan mana yang dimiliki hero kamu dengan tombol Heal. Taruh ward yang kamu miliki di lokasi yang kamu inginkan dengan tombol Observer Ward.\n\nKamu juga bisa melakukan pengaturan terhadap pengendalian gerakkan hero yang lebih kompleks, seperti menentukan target (hero, tower atau creep) secara manual.</string>
    <string name="item3satu">\tMeskipun Pengwing memang cenderung "tipis" di awal permainan, namun ia dapat melakukan farming dengan mudah menggunakan damage AoE dari skill 1 dan passive skill (skill 4)-nya.
Skill 2-nya pun memiliki banyak kegunaan. Jika sedang menyerang, skill ini dapat memberikan damage sekaligus menutup jalan kabur lawan. Namun skill ini juga dapat digunakan untuk kabur dari lawan (dorong musuh dengan ultimate skill-nya, lalu kabur dengan skill 2).</string>
    <string name="item3dua">\tRockman adalah hero yang sangat mudah digunakan. Semua skill-nya miliki tidak mengharuskan kita untuk membidik. Skill passive regeneration-nya juga membuat dia sulit dibunuh meski di awal permainan dimana Rockman rentan terhadap serangan jarak jauh.</string>
    <string name="item3tiga">\tMenggunakan Electros tidak terlalu sulit mengingat skill aktif yang ia miliki hanya 2. Dia juga dapat memberikan sejumlah damage ke beberapa musuh dengan skill pasifnya serta lumayan mudah untuk kabur dari atau membuka pertarungan dengan skill 2-nya.</string>
    <string name="item4satu">\tVision (penglihatan) sangatlah penting dalam bermain game MOBA seperti Heroes Evolved. Area di luar jarak pandang tidak akan dapat dilihat karena adanya Fog of War. Kekurangan vision dapat menyebabkan hero kamu di-gank (dikeroyok) tim lawan sehingga memungkinan gerakkanmu menjadi terbatas. Untuk mengatasi masalah ini, pemain harus menggunakan ward. Kamu akan diberikan sebuah Observer Ward pada awal permainan yang dapat memberikan jarak pandang yang luas. Ward ini dapat di-upgrade menjadi Detection Gem dan True Sight Gem yang membuatmu dapat memberi tim-mu true sight (dapat melihat musuh invisible ataupun ward lawan).</string>
    <string name="hero1skill1">\tMelepaskan amunisi peluru selama 4 detik, dan memberikan setengah dari serangan tersebut ke musuh di sekitar sasaran. Memakai skill sekali lagi akan mengganti sasaran serangan. Bisa digunakan sambil bergerak.\n \n Damage Physical = 60/80/100/120 per 0.5 sec \n Radius Peluru = 900 \n Mana yang dibutuhkan = 60 \n Radius Percikan = 350 \n Cooldown = 7 sec </string>
    <string name="hero1skill2">\tMelakukan serangan ke satu arah dan menaruh bom di musuh yang berada di jalur serangan. Bom akan meledak setelah 1 detik. Sasaran akan terkena stun selama 1 detik setelah ledakan. Tidak menghentikan Bullet Storm (Badai Peluru) \n\n Damage Physical = 120/160/200/240 \n Jangkauan Terjangan	= 650 \n Cooldown	= 11/10/9/8sec \n Mana yang Dibutuhkan = 50</string>
    <string name="hero1skill3">\tSetelah mengaktifkan Skill, kecepatan serangan akan menjadi maksimal, dan setiap serangan biasa dan serangan fatal akan meningkatkan serangan fisik yang dikeluarkan dari serangan dan Skill. Setelah diaktifkan, skill akan terus menggunakan Mana. Skill tidak terpengaruh oleh item gear pengurangan cooldown. \n\nDamage Physical Bonus = 15%/20%/25% per hit\nDamage Maksimal = 60%/80%/100%\nMana Yang Dibutuhkan = 6% per detik\nDurasi = 4 Detik\nCooldown = 30 detik</string>
    <string name="hero1skill4">\tBonnie menggunakan senjata untuk menyerang. Tiap serangan yang mengenai sasaran akan meningkatkan kecepatan serangan dan meningkatkan damage serangan selama 3 detik. hingga 4 tumpukan.\n\nBonus Attack Speed = 20/25/30/35 per hit</string>
    <string name="hero2skill1">\tBurninator menembak lokasi target, memberikan damage physical kepada musuh di sekitar target (dalam area berbentuk persegi). Musuh juga akan dilambatkan selama 3 detik. \n\nDamage = 150/200/250/300 \nSlow = 25%/30%/35%/40% \nMana Yang Dibutuhkan = 80 \nDurasi Slow	= 3 sec \nCast Range = 1000	\nCooldown = 7 sec</string>
    <string name="hero2skill2">\tBurninator melompat ke angkasa dan jatuh menghantam lokasi target. Akan mengakibatkan stun selama 0.75 setik pada musuh di sekitar lokasi jatuh. Setelah jatuh, Burninator memerlukan waktu selama 0.75 untuk merangkai dirinya lagi.\n\nDamage = 180/220/260/300\nJarak Skill = 1000\nRadius = 450\nMana Yang Dibutuhkan = 100 \nDurasi Stun = 0.75 detik\nDurasi Merangkai = 0.75 detik\nCooldown = 10 sec</string>
    <string name="hero2skill3">\tBurninator menggunakan Fel Bargain untuk menyembuhkan 6% dari health maksimumnya per detik. Selain itu Burninator juga mendapatkan bonus 25% movement speed dan memperlebar radius Hellfire.\n\n(Pasif) Mendapatkan bonus armor dan spell resistance secara permanen.\n\nHeal = 6% dari health maksimum per detik\n Movement Speed = 25%\n Durasi = 4 / 5.5 / 7 sec\n Mana Yang Dibutuhkan = 100 / 125 / 150\n Bonus Defense (Pasif) = 25/35/45\n Bonus Spell Resist (Pasif) = 9/12/15\n Cooldown = 30 sec</string>
    <string name="hero2skill4">\tMemanggil api dari neraka untuk membakar musuh di sekitar Burninator. Memberikan magic damage dan juga bonus damage berdasarkan health maksimum Burninator. \n\nDamage per detik	= 30/45/60/75\n Bonus Damage = 1% dari health maksimum\n Health Regen = 0.5% dari health maksimum\n Radius = 300</string>
    <string name="hero3skill1">\tMelompat ke area sasaran, memberikan damage physical kepada musuh dalam area tersebut sambil memberikan efek slow selama 3 deitk. Cooldown skill ini akan direset tiap kali Mikio mendapat kill atau assist pada musuh yang masih terpengaruh skill ini.\n\nDamage = 180/240/300/360\nMovement Slow = 20%/25%/30%/35% selama 3 sec\nMana Yang Dibutuhkan = 65/75/85/95\nRadius = 400\nJarak Skill = 1000\nPengurangan Cooldown = Reset saat kill atau assist\nCooldown = 12 sec</string>
    <string name="hero3skill2">\tMenghantam tanah dan meluncurkan pecahan batu ke arah sasaran dan memberikan damage physical kepada musuh yang kena, sambil memberikan efek Blind selama 1 detik.\n\nDamage = 180/230/280/330\nDurasi Blind = 1 detik\nMana Yang Dibutuhkan = 60/70/80/90\nJarak = 1350\nCooldown = 8 sec</string>
    <string name="hero3skill3">\tMikio menghempaskan pedangnya OUGI ke area sasaran, menyerang 9 kali dan memberikan damage pure ke hero musuh di dalam area tersebut. Tiap hero musuh hanya dapat terkena maksimal 5 serangan.\n\nDamage per Serangan = 80/120/160\nSerangan Maximum = 5 untuk tiap hero\nMana Yang Dibutuhkan = 120/180/240\nRadius	= 500\nJarak Skill = 800\nCooldown = 50 sec</string>
    <string name="hero3skill4">\tMenggunakan kuda-kuda KENDO selama 4 detik. Menyerang atau menggunakan skill akan menyelesaikan skill ini. Selama Kendo aktif, serangan atau skill berikutnya dari Mikio memberikan bonus damage physical. Selain itu, tiap satu detik dalam kondisi ini akan mengurangi cooldown skill lain Mikio selama 1 detik.\n\nBonus Damage = 120/160/200/240\nDurasi = 4 sec\nMana Yang Dibutuhkan = 30\nPengurangan Cooldown = Tiap 1 sec, kurangi 1 sec cooldown untuk skill lain\nCooldown = 8 sec</string>
    <string name="hero4skill1">\tLapina menerjang ke area sasaran dan mendapatkan bonus attack speed (kecepatan serangan) dan movement speed (kecepatan gerakan). Jika terdapat unit; baik unit musuh, unit teman maupun skill Bunny Stunner; di dekat tempat Lapina mendarat, maka Lapina akan melakukan sekali lagi terjangan sesuai arah joystick kiri pemain. \n\nBonus Attack Speed = 35/45/55/65\nBonus Movement Speed = 35/45/55/65\nMana yang dibutuhkan = 50 + 3% max mana \nDurasi = 3 sec Cooldown = 11/10/9/8 sec</string>
    <string name="hero4skill2">\tLapina melempar sebuah Bunny Bomb ke area sasaran, memberikan damage physical dan menyebabkan slow selama 2 detik. Unit musuh yang terkena ledakan di bagian tengah akan mengalami stun selama 1 detik. \n\nDamage Physical = 120 / 160 / 200 / 240\nSlow = 20% / 30% / 40% / 50%\nMana Yang Dibutuhkan = 60 \nJarak Skill = 1100\nCooldown = 10/9/8/7 sec</string>
    <string name="valleymode1">\tSebuah 5v5 Game Mode yang mempertemukan tiap tim kedalam satu lane untuk pertempuran habis-habisan. Hanya dengan 3 towers untuk tiap tim dan satu lane untuk bertempur, player akan bertarung dengan kuat dan gigih untuk setiap inchi lane.</string>
    <string name="valleymode2">Fitur dalam Valley yaitu: \n• Di dalam seleksi Hero untuk Valley of War, kamu akan diberikan 3 hero acak untuk memilih.\n• Saat pertama mulai, tiap player diberikan 2200 koin. (2000 lebih koin dari di Altar of Strife)\n• Hanya ada satu lane, tanpa ada jungle creeps.</string>
    <string name="valleymode3">• Penyembuhan di dekat Fountain ditiadakan.\n• Melee hero mempunyai bonus regenerasi kesehatan.\n• Pembelian item hanya diperbolehkan ketika kamu hidup kembali di Fountain.\n• Players tidak diperbolehkan untuk membeli ketika mereka meninggalkan area Fountain.</string>
    <string name="valleymode4">• Sebagai ganti dari kemampuan untuk Teleport, Player diberikan kemampuan "Flash". Flash digunakan untuk dash jarak yang dekat. (antara untuk menghindari serangan atau untuk mengejar hero musuh.)</string>
    <string name="vallemode5">• Di tengah jalur, ada 2 power-up globes yang spawns dalam waktu 30 detik ketika game mulai. (Setiap power-up akan menambah experience heromu.)</string>
    <string name="chaotic1">Chaotic Strife adalah sebuah game mode yang berisi mode yang berbeda-beda dan diganti setiap minggunya. (Saat ini, ada dua mode yang dapat kamu pilih, yaitu Total Mayhem dan Bloody Carnage). Chaotic Strife hanya bisa dimainkan tiap Minggu dan Senin diantara jam 12:00 -14:00 dan 18:00 - 20:00.</string>
    <string name="totalmayhem">Total Mayhem mempunyai beberapa peraturan dan tambahan:\n\ni) Brutal Bash\n• Semua Jeda dikurangi sebanyak 75%.\n• Items, Jewels dan Kemampuan tidak terpengaruh jeda.\n• Tidak perlu mana untuk menggunakan kemampuan.\n\nii) Meat Sandwich\n• Semua Hero mulai dengan bonus 500 kesehatan.\n\niii) Siege Warfare\n• Hancurkan Aegis musuh untuk menang.\n• Hadiah Emas di gandakan.</string>
    <string name="bloody">Bloody Carnage mempunyai beberapa aturan tambahan:\n\n i) Overcrowded\n• Jumlah pemain dalam satu tim diubah menjadi 7 orang.\n\nii) Gear Wars\n• Jumlah item maksimal diubah menjadi 9 item untuk setiap pemain.\n\niii) God s Gift\n• Membunuh hero musuh, jungle creep, ataupun troop memberikanmu kesempatan mendapatkan random chest. Kamu memiliki kesempatan untuk mendapatkan item bintang tinggi dari random chest.</string>
    <string name="clone">Clone War akan menggunakan beberapa aturan tambahan, yaitu:\n\ni) Clone Hero\n• Seluruh anggota dalam satu tim menggunakan hero yang sama.\n\nPada saat memilih hero, pemain akan bebas memilih hero (kecuali hero yang di-ban). Hero dengan jumlah pick paling banyak akan terpilih sebagai hero yang digunakan seluruh anggota tim.\n\nii) Ban Hero\n• Beberapa hero yang dianggap dapat menyebabkan game tidak balance akan di-ban otomatis oleh game.\n\niii) Siege Warfare\n• Hancurkan Aegis musuh untuk menang.</string>
</resources>