<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound1"
    tools:context=".ValleyActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/boxbig" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/valley1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/abril_fatface"
                android:text="Valley of War"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/valleymode1"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/item2one"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/item1one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/valleymode2"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/item2two"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/item1two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/valleymode3"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/item2three"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/item1three" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/valleymode4"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/item2four"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/item1four" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/vallemode5"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>