<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound1"
    tools:context=".ChaosActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/boxbig" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/valley1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/abril_fatface"
                android:text="Chaotic Strife"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/chaotic1"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/abril_fatface"
                android:text="Blody Carnage"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/item2one"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bloody1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/bloody"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/abril_fatface"
                android:text="Total Mayhem"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/item2two"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/totalmayhem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/totalmayhem"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/abril_fatface"
                android:text="Clone War"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/item2three"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/clonewar2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus_slab"
                android:text="@string/clone"
                android:textColor="@color/colorBlack"
                android:textSize="12dp" />

        </LinearLayout>
    </FrameLayout>
</ScrollView>